manifests/home-assistant-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: default
spec:
  parentRefs:
    - name: longwood
      namespace: default
  hostnames:
    - longwood.daphnai.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant
          namespace: home-assistant
          port: 8123
